--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-		<title>Awesome</title>
+		<title>Sandhya Sorte</title>
 		
 		<!-- css -->
 		
@@ -30,21 +30,21 @@
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center">
 								<div class="theme-name">
-									<a href="#" class="title">Awesome</a>
+									<a href="#" class="title">Sandhya Sorte</a>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="header-text">
-									<p class="service-text">our awesome products and services are</p>
-									<p class="coming">coming soon</p>
+									<p class="service-text">Sandhya Sorte's Official Website</p>
+									<p class="coming">Coming Soon</p>
 								</div>
 							</div>
 						</div>
 
 						<!--  begin of counter  -->
-
+<!-- 
 						<div class="row">
 							<div class="col-md-12">
 								<div class="numbers" id="count2"></div>
@@ -65,11 +65,11 @@
 						<!--  end of counter -->
 					</div> <!--  end of .container  -->
 				</div><!-- end of .header-wrapper  -->
-			</section>
+			</section> -->
 			<!--   end of header section     -->
 
 			<!--   begin of newsletter section  -->
-			<section class="newsletter text-center">
+<!-- 			<section class="newsletter text-center">
 				<div class="newsletter-wrapper">
 					<div class="container">
 						<div class="row">
@@ -92,7 +92,7 @@
 					</div><!--  end of .container  -->
 				</div> <!--  end of .newssletter-wrapper  -->
 			</section>
-			<!--   end of newsletter section  -->
+ -->			<!--   end of newsletter section  -->
 
 			<!--   begin of social-media section  -->
 			<section class="social-media text-center">
@@ -102,19 +102,7 @@
 							<h2 class="social-media-text">get updates from social media</h2>
 							<div class="col-md-8 col-md-offset-2">
 								<div class="social-links">
-									<a target="_blank" href="#" title="Facebook">
-										<i class="fa fa-facebook"></i>
-									</a>
-									<a target="_blank" href="#" title="Twitter">
-										<i class="fa fa-twitter"></i>
-									</a>
-									<a target="_blank" href="#" title="Google+">
-										<i class="fa fa-google-plus"></i>
-									</a>
-									<a target="_blank" href="#" title="Pinterest">
-										<i class="fa fa-pinterest"></i>
-									</a>
-									<a target="_blank" href="" title="Instagram">
+									<a target="_blank" href="http://instagram.com/sandhyasorte" title="Instagram">
 										<i class="fa fa-instagram"></i>
 									</a>
 								</div>
@@ -132,11 +120,11 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<p class="copy-right text-center">&copy; 2015 Awesome. All rights reserved.</p>
+								<p class="copy-right text-center">&copy; 2017 Sandhya Sorte</p>
 							</div>
-							<div class="col-md-6">
+							<!-- <div class="col-md-6">
 								<p class="develop text-center">Developed by <a href="http://themewagon.com">ThemeWagon <sup>TM</sup></a></p>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div><!--  end of .footer-wrapper  -->
