--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 		<link rel="stylesheet" type="text/css" href="css/custom.css">
 
 	</head>
-	<body onload="countdown(year,month,day,hour,minute)">
+	<!-- <body onload="countdown(year,month,day,hour,minute)"> -->
 		<div class="body-wrapper">
 
 			<!--   begin of header section   -->
 			<section class="header" id="overlay-1">
 				<div class="header-wrapper">
 					<div class="container">
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center">
 								<div class="theme-name">
 									<a href="#" class="title">Sandhya Sorte</a>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="header-text">
@@ -44,7 +44,7 @@
 						</div>
 
 						<!--  begin of counter  -->
-<!-- 
+<!--
 						<div class="row">
 							<div class="col-md-12">
 								<div class="numbers" id="count2"></div>
@@ -60,13 +60,13 @@
 								<div class="col-md-2 col-xs-3 col-sm-2 hr title" id="hours">hr</div>
 								<div class="col-md-2 col-xs-3 col-sm-2 min title" id="minutes">min</div>
 								<div class="col-md-4 col-xs-3 col-sm-4 sec title" id="seconds">sec</div>
-							</div>
-						</div>
-						<!--  end of counter -->
-					</div> <!--  end of .container  -->
-				</div><!-- end of .header-wrapper  -->
-			</section> -->
-			<!--   end of header section     -->
+							</div> -->
+						<!-- </div> -->
+						 <!-- end of counter -->
+					<!-- </div>  end of .container  -->
+				<!-- </div>end of .header-wrapper  -->
+			<!-- </section> 
+			<!--   end of header section     --> 
 
 			<!--   begin of newsletter section  -->
 <!-- 			<section class="newsletter text-center">
@@ -90,9 +90,9 @@
 							</div>
 						</div>
 					</div><!--  end of .container  -->
-				</div> <!--  end of .newssletter-wrapper  -->
-			</section>
- -->			<!--   end of newsletter section  -->
+				<!-- </div>  end of .newssletter-wrapper  -->
+			<!-- </section> -->			 -->
+			<!--   end of newsletter section  -->
 
 			<!--   begin of social-media section  -->
 			<section class="social-media text-center">
